# jxrlib

./: meson.build
.github/workflows/: build.yaml
common/include/: guiddef.h  wmspecstring.h
image/decode/: JXRTranscode.c  decode.c  segdec.c  strPredQuantDec.c  strdec.c
image/encode/: segenc.c  strFwdTransform.c  strenc.c
image/sys/: adapthuff.c  common.h  image.c  strPredQuant.c  strcodec.c  strcodec.h  windowsmediaphoto.h
jxrencoderdecoder/: JxrDec420.c  JxrDecApp.c  JxrEnc420.c  JxrEncApp.c
jxrgluelib/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRGluePFC.c  JXRMeta.c  JXRMeta.h
jxrtestlib/: JXRTest.c  JXRTest.h  JXRTestTif.c
test/: decode.py  tiff-hashes.json
